// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 1`] = `
[
  {
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {},
        "id": "child1|undefined",
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            [Circular],
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {},
              "id": "child2|undefined",
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
              "title": "child2",
            },
          ],
          "data": {
            "isGroup": true,
          },
          "id": "group|undefined",
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
          "title": "group",
        },
        "previousNode": undefined,
        "title": "child1",
      },
    },
    "height": 75,
    "id": "child1|undefined",
    "parentNode": "group|undefined",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {},
        "id": "child2|undefined",
        "nextNode": undefined,
        "parentNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": [
            VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {},
              "id": "child1|undefined",
              "nextNode": undefined,
              "parentNode": [Circular],
              "previousNode": undefined,
              "title": "child1",
            },
            [Circular],
          ],
          "data": {
            "isGroup": true,
          },
          "id": "group|undefined",
          "nextNode": undefined,
          "parentNode": undefined,
          "previousNode": undefined,
          "title": "group",
        },
        "previousNode": undefined,
        "title": "child2",
      },
    },
    "height": 75,
    "id": "child2|undefined",
    "parentNode": "group|undefined",
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
  {
    "children": [
      "child1|undefined",
      "child2|undefined",
    ],
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {},
            "id": "child1|undefined",
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
            "title": "child1",
          },
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {},
            "id": "child2|undefined",
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
            "title": "child2",
          },
        ],
        "data": {
          "isGroup": true,
        },
        "id": "group|undefined",
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
        "title": "group",
      },
    },
    "group": true,
    "id": "group|undefined",
    "label": "group|undefined",
    "parentNode": undefined,
    "style": {
      "padding": 40,
    },
    "type": "group",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a group with children 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 1`] = `
[
  {
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {},
        "id": "node|undefined",
        "nextNode": VisualizationNode {
          "DISABLED_NODE_INTERACTION": {
            "canBeDisabled": false,
            "canHaveChildren": false,
            "canHaveNextStep": false,
            "canHavePreviousStep": false,
            "canHaveSpecialChildren": false,
            "canRemoveFlow": false,
            "canRemoveStep": false,
            "canReplaceStep": false,
          },
          "children": undefined,
          "data": {},
          "id": "set-header|undefined",
          "nextNode": VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": [
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": undefined,
                    "data": {},
                    "id": "when-leaf|undefined",
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                    "title": "when-leaf",
                  },
                ],
                "data": {},
                "id": "when|undefined",
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
                "title": "when",
              },
              VisualizationNode {
                "DISABLED_NODE_INTERACTION": {
                  "canBeDisabled": false,
                  "canHaveChildren": false,
                  "canHaveNextStep": false,
                  "canHavePreviousStep": false,
                  "canHaveSpecialChildren": false,
                  "canRemoveFlow": false,
                  "canRemoveStep": false,
                  "canReplaceStep": false,
                },
                "children": [
                  VisualizationNode {
                    "DISABLED_NODE_INTERACTION": {
                      "canBeDisabled": false,
                      "canHaveChildren": false,
                      "canHaveNextStep": false,
                      "canHavePreviousStep": false,
                      "canHaveSpecialChildren": false,
                      "canRemoveFlow": false,
                      "canRemoveStep": false,
                      "canReplaceStep": false,
                    },
                    "children": [
                      VisualizationNode {
                        "DISABLED_NODE_INTERACTION": {
                          "canBeDisabled": false,
                          "canHaveChildren": false,
                          "canHaveNextStep": false,
                          "canHavePreviousStep": false,
                          "canHaveSpecialChildren": false,
                          "canRemoveFlow": false,
                          "canRemoveStep": false,
                          "canReplaceStep": false,
                        },
                        "children": undefined,
                        "data": {},
                        "id": "log|undefined",
                        "nextNode": undefined,
                        "parentNode": [Circular],
                        "previousNode": undefined,
                        "title": "log",
                      },
                    ],
                    "data": {},
                    "id": "process|undefined",
                    "nextNode": undefined,
                    "parentNode": [Circular],
                    "previousNode": undefined,
                    "title": "process",
                  },
                ],
                "data": {},
                "id": "otherwise|undefined",
                "nextNode": undefined,
                "parentNode": [Circular],
                "previousNode": undefined,
                "title": "otherwise",
              },
            ],
            "data": {},
            "id": "choice|undefined",
            "nextNode": VisualizationNode {
              "DISABLED_NODE_INTERACTION": {
                "canBeDisabled": false,
                "canHaveChildren": false,
                "canHaveNextStep": false,
                "canHavePreviousStep": false,
                "canHaveSpecialChildren": false,
                "canRemoveFlow": false,
                "canRemoveStep": false,
                "canReplaceStep": false,
              },
              "children": undefined,
              "data": {},
              "id": "direct|undefined",
              "nextNode": undefined,
              "parentNode": undefined,
              "previousNode": [Circular],
              "title": "direct",
            },
            "parentNode": undefined,
            "previousNode": [Circular],
            "title": "choice",
          },
          "parentNode": undefined,
          "previousNode": [Circular],
          "title": "set-header",
        },
        "parentNode": undefined,
        "previousNode": undefined,
        "title": "node",
      },
    },
    "height": 75,
    "id": "node|undefined",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a multiple nodes VisualizationNode 2`] = `
[
  {
    "edgeStyle": "solid",
    "id": "node|undefined-to-set-header|undefined",
    "source": "node|undefined",
    "target": "set-header|undefined",
    "type": "edge",
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 1`] = `
[
  {
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": undefined,
        "data": {},
        "id": "node|undefined",
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
        "title": "node",
      },
    },
    "height": 75,
    "id": "node|undefined",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a simple VisualizationNode 2`] = `[]`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 1`] = `
[
  {
    "data": {
      "vizNode": VisualizationNode {
        "DISABLED_NODE_INTERACTION": {
          "canBeDisabled": false,
          "canHaveChildren": false,
          "canHaveNextStep": false,
          "canHavePreviousStep": false,
          "canHaveSpecialChildren": false,
          "canRemoveFlow": false,
          "canRemoveStep": false,
          "canReplaceStep": false,
        },
        "children": [
          VisualizationNode {
            "DISABLED_NODE_INTERACTION": {
              "canBeDisabled": false,
              "canHaveChildren": false,
              "canHaveNextStep": false,
              "canHavePreviousStep": false,
              "canHaveSpecialChildren": false,
              "canRemoveFlow": false,
              "canRemoveStep": false,
              "canReplaceStep": false,
            },
            "children": undefined,
            "data": {},
            "id": "child|undefined",
            "nextNode": undefined,
            "parentNode": [Circular],
            "previousNode": undefined,
            "title": "child",
          },
        ],
        "data": {},
        "id": "node|undefined",
        "nextNode": undefined,
        "parentNode": undefined,
        "previousNode": undefined,
        "title": "node",
      },
    },
    "height": 75,
    "id": "node|undefined",
    "parentNode": undefined,
    "shape": "rect",
    "type": "node",
    "width": 90,
  },
]
`;

exports[`FlowService getFlowDiagram should return nodes and edges for a two-nodes VisualizationNode 2`] = `[]`;
